--- a/requirements.txt
+++ b/requirements.txt
@@ -16,4 +16,7 @@ uvicorn>=0.23.0
 python-multipart>=0.0.6
 scipy>=1.10.0
 httpx>=0.24.0
-pytest-asyncio>=0.21.0 
+pytest-asyncio>=0.21.0
+matplotlib>=3.7.0
+pandas>=2.0.0
+seaborn>=0.12.0 
